# Finance_Tracker

./: .env.example  .env.prod.example  .gitignore  .replit  DEPLOYMENT_CHECKLIST.md  DOCKER.md  DOCKER_QUICKSTART.md  DOCKER_SECURITY.md  DOCKER_SETUP_SUMMARY.md  DOCKER_WITH_RENDER.md  Makefile  Procfile  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  index.html  nginx-prod.conf  package-lock.json  package.json  render.yaml  replit.md  requirements.txt
attached_assets/: Pasted--Docs-on-specifying-a-Python-version-https-render-com-d_1775895775546.txt  Pasted-I-already-have-an-existing-Finance-Tracker-project-from_1776082645945.txt  (+3 more)
backend/: .env.example  Dockerfile  Procfile  build.sh  pyproject.toml  requirements.txt
backend/budgets/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/budgets/migrations/: 0001_initial.py  0002_budget_alert_threshold_and_more.py
backend/categories/: admin.py  models.py  serializers.py  urls.py  views.py
backend/categories/migrations/: 0001_initial.py
backend/finance_tracker/: settings.py  urls.py
backend/goals/: admin.py  models.py  serializers.py  views.py
backend/goals/migrations/: 0001_initial.py
backend/transactions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/transactions/migrations/: 0001_initial.py
backend/users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/users/migrations/: 0002_alter_customuser_options.py  0003_otpverification.py  0004_remove_otpverification.py
files-3/: AuthContext.jsx
src/: App.jsx  (+1 more)
(+49 files in other folders)
